--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,16 +11,16 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_height="wrap_content">
+
         <EditText
+            android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/button"
-            android:layout_marginRight="15dp"
-            android:padding="10dp"
-            android:hint="Tap to Speak"
-            android:id="@+id/text"
             android:layout_centerInParent="true"
-            />
+            android:layout_marginRight="15dp"
+            android:layout_toLeftOf="@id/button"
+            android:hint="Premi per ascoltare"
+            android:padding="10dp" />
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
