--- a/app/src/main/res/layout/livello.xml
+++ b/app/src/main/res/layout/livello.xml
@@ -46,6 +46,12 @@
 
         </LinearLayout>
 
+        <Button
+            android:id="@+id/goBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="home" />
+
     </LinearLayout>
 
 
